--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,18 @@
 {
-  "name": "FixFlow - ระบบแจ้งซ่อม",
-  "short_name": "FixFlow",
-  "description": "เว็บแอปพลิเคชันสำหรับค้นหาและแจ้งอันตรายภายในองค์กร",
-  "start_url": "./index.html",
-  "display": "standalone",
-  "background_color": "#f1f5f9",
-  "theme_color": "#3b82f6",
-  "icons": [
-    {
-      "src": "./icon-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./icon-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "name": "fixflow-backend",
+  "version": "1.0.0",
+  "description": "Backend server for FixFlow Web Push Notifications",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "web-push": "^3.6.7"
+  }
 }
