--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "fixflow-backend",
+  "name": "nadol",
   "version": "1.0.0",
-  "description": "Backend server for FixFlow Web Push Notifications",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^5.1.0",
     "web-push": "^3.6.7"
   }
 }
