--- a/manifest.json
+++ b/manifest.json
@@ -2,20 +2,22 @@
   "name": "FixFlow - ระบบแจ้งซ่อม",
   "short_name": "FixFlow",
   "description": "เว็บแอปพลิเคชันสำหรับแจ้งซ่อมบำรุงภายในองค์กร",
-  "start_url": "./index.html",
+  "start_url": "/webput/index.html",
   "display": "standalone",
   "background_color": "#f1f5f9",
   "theme_color": "#4f46e5",
   "icons": [
     {
-      "src": "./icon-192.png",
+      "src": "/webput/icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
-      "src": "./icon-512.png",
+      "src": "/webput/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
